fix(dropdown) styling fixes

--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <h2>Custom dropdown</h2>
-
-  <div class="dropdown-container" (click)="selector.focus(); openDropDown()">
+  <div class="dropdown-container"
+       [class.active]="dropdownOpened"
+       (click)="selector.focus(); openDropDown()">
     <input [value]="_selectedOption?.itemName" #selector (focusout)="closeDropDown()" readonly [placeholder]="placeholder" type="text" >
     <span class="suffix"></span>
   </div>
