--- a/src/app/dropdown/dropdown.component.scss
+++ b/src/app/dropdown/dropdown.component.scss
@@ -1,17 +1,26 @@
 .container {
   width: 300px;
   max-width: 50%;
+  padding: 20px 50px 20px 20px;
+  border-radius: 6px;
+  background: #f7f9fb;
   .dropdown-container {
-    border: 1px solid grey;
+    border: 1px solid #e8e9eb;
     border-radius: 10px;
+    background: white;
     padding: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+    &.active {
+      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    }
+
     input {
       border: none;
       outline: none;
+      background: transparent;
 
       &:focus {
         & ~ .suffix {
@@ -32,28 +41,26 @@
       margin-bottom: 2px;
       transition: all .2s;
 
-      &::before {
+      &:after {
         border-style: solid;
-        border-width: 0.15em 0.15em 0 0;
-        content: '';
+        border-width: 0 2px 2px 0;
+        content: "";
         display: inline-block;
-        height: 0.3em;
-        left: 0.15em;
-        position: relative;
-        top: 0;
-        transform: rotate(135deg);
-        vertical-align: top;
-        width: 0.3em;
+        padding: 3px;
+        transform: rotate(45deg);
+        vertical-align: middle;
       }
     }
   }
 
   .dropdown-items {
     margin-top: 10px;
-    border: 1px solid grey;
+    //border: 1px solid grey;
+    background: white;
     border-radius: 6px;
     max-height: calc(7 * 30px);
     overflow-y: auto;
+    box-shadow: 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     div {
       height: 30px;
       display: flex;
@@ -61,7 +68,7 @@
       padding: 0 4px;
       transition: all .2s;
       &:hover, &.selected {
-        background: rgba(aqua, .1);
+        background: #e7f6ff;
       }
     }
   }
